--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -5,21 +5,21 @@
   "nav-food": "Our Food",
   "nav-contact": "Contact",
   "hero-title": "Warung Sumatra",
-  "hero-subtitle": "Authentic Indonesian flavors in elegant presentation",
+  "hero-subtitle": "Authentic Indonesian flavors in an elegant setting",
   "hero-menu-btn": "View Menu",
   "hero-reservation-btn": "Reservation",
-  "about-title": "About Restaurant",
+  "about-title": "About the Restaurant",
   "about-story-title": "Our Story",
-  "about-story-1": "Warung Sumatra is where traditional Indonesian cuisine meets modern elegance. Our recipes come from the island of Sumatra and other regions of Indonesia, passed down through generations.",
-  "about-story-2": "We prepare each dish with the freshest ingredients, using authentic spices imported directly from Indonesia. Our team of chefs combines traditional techniques with modern presentation.",
+  "about-story-1": "Warung Sumatra is a place where traditional Indonesian cuisine meets modern elegance. Our recipes come from the island of Sumatra and other regions of Indonesia, passed down from generation to generation.",
+  "about-story-2": "We prepare every dish with the freshest ingredients, using authentic spices imported directly from Indonesia. Our team of chefs combines traditional techniques with modern presentation.",
   "about-years": "Years of Experience",
-  "about-dishes": "Dishes on Menu",
+  "about-dishes": "Dishes on the Menu",
   "food-title": "Our Specialties",
-  "food-subtitle": "Discover the richness of Indonesian cuisine in our signature interpretations",
+  "food-subtitle": "Discover the richness of Indonesian cuisine in our unique interpretations",
   "dish-nasi-title": "Nasi Goreng",
-  "dish-nasi-desc": "Traditional Indonesian fried rice with vegetables, egg and aromatic spices",
+  "dish-nasi-desc": "Traditional Indonesian fried rice with vegetables, egg, and aromatic spices",
   "dish-rendang-title": "Rendang",
-  "dish-rendang-desc": "Aromatic beef curry cooked in coconut milk with rich spice blend",
+  "dish-rendang-desc": "Aromatic beef curry cooked in coconut milk with a rich spice blend",
   "dish-gado-title": "Gado-Gado",
   "dish-gado-desc": "Fresh vegetable salad served with traditional peanut satay sauce",
   "menu-title": "Menu",
@@ -27,48 +27,170 @@
   "gallery-main": "Main Hall",
   "gallery-bar": "Bar Area",
   "gallery-private": "Private Room",
-  "menu-main-title": "Main Dishes",
+  "menu-additional-to-choose-title": "Additional Options",
+  "menu-additional-sauce-to-choose-title": "Sauces to Choose",
+  "menu-bakmie-title": "Bakmie (Fried Noodles)",
+  "menu-allergens-title": "Allergen List",
+  "menu-nasi-goreng-title": "Nasi Goreng (Fried Rice)",
+  "menu-other-dishes-title": "Other Dishes",
+  "menu-soups-title": "Soups",
+  "menu-soups-subtitle": "500ml (choose from soy, rice, wheat, or rice noodles)",
   "menu-appetizers-title": "Appetizers",
-  "menu-desserts-title": "Desserts",
-  "menu-nasi-ayam": "Nasi Goreng Ayam",
-  "menu-nasi-ayam-desc": "Fried rice with chicken and vegetables",
-  "menu-rendang": "Rendang Daging",
-  "menu-rendang-desc": "Beef in coconut curry",
-  "menu-ayam-bakar": "Ayam Bakar",
-  "menu-ayam-bakar-desc": "Grilled chicken in soy sauce",
-  "menu-mie-goreng": "Mie Goreng",
-  "menu-mie-goreng-desc": "Stir-fried noodles with vegetables",
-  "menu-gado-gado": "Gado-Gado",
-  "menu-gado-gado-desc": "Salad with peanut sauce",
-  "menu-satay": "Satay Ayam",
-  "menu-satay-desc": "Chicken skewers (6 pcs.)",
-  "menu-es-cendol": "Es Cendol",
-  "menu-es-cendol-desc": "Traditional coconut milk dessert",
-  "menu-pisang-goreng": "Pisang Goreng",
-  "menu-pisang-goreng-desc": "Fried bananas in batter",
+  "menu-tempura-title": "Tempura",
+  "menu-drinks-title": "Drinks",
+  "menu-bakmie-wheat-peanut-sauce-title": "Wheat with peanut sauce (1,6,**)",
+  "menu-bakmie-rice-or-soy-oyster-sauce-title": "Rice or soy with oyster sauce (1,4,6)",
+  "menu-bakmie-rice-hoisin-sauce-title": "Rice with hoisin sauce (1,*,**)",
+  "menu-bakmie-wheat-or-rice-sumatra-sauce-title": "Wheat or rice with Sumatra sauce (1,*,**)",
+  "menu-bakmie-wheat-or-soy-tumbuk-sauce-title": "Wheat or soy with Tumbuk sauce (1,*,**)",
+  "menu-bakmie-wheat-or-soy-tumbuk-sauce-desc": "Turmeric, Coconut, Lemongrass",
+  "menu-bakmie-wheat-or-rice-harasak-sauce-title": "Wheat or rice with Harasak sauce (1,4)",
+  "menu-bakmie-wheat-or-rice-harasak-sauce-desc": "Fish flavor",
+  "menu-bakmie-wheat-or-soy-jingo-sauce-title": "Wheat or soy with Jingo sauce (1,*,**)",
+  "menu-bakmie-wheat-or-soy-jingo-sauce-desc": "Curry",
+  "menu-nasigoreng-batak-title": "Batak",
+  "menu-nasigoreng-batak-desc": "Spiced sauce (1,*,**)",
+  "menu-nasigoreng-kampung-title": "Kampung",
+  "menu-nasigoreng-kampung-desc": "Sweet and salty soy sauce (1,6,)",
+  "menu-nasigoreng-kare-title": "Kare",
+  "menu-nasigoreng-kare-desc": "Curry (1,*,**)",
+  "menu-nasigoreng-hoisin-title": "Hoisin",
+  "menu-nasigoreng-hoisin-desc": "Smoked plum (1,*,**)",
+  "menu-nasigoreng-gublak-title": "Gublak",
+  "menu-nasigoreng-gublak-desc": "Rawan paste (1,6,**)",
+  "menu-nasigoreng-celor-title": "Celor",
+  "menu-nasigoreng-celor-desc": "Mix of Indonesian spices (1,**)",
+  "menu-nasigoreng-lada-hitman-title": "Lada Hitman",
+  "menu-nasigoreng-lada-hitman-desc": "Black pepper (1,4,6,**)",
+  "menu-additional-chicken-title": "Chicken",
+  "menu-additional-pork-title": "Pork",
+  "menu-additional-beef-title": "Beef",
+  "menu-additional-tempeh-tofu-title": "Tempeh / Tofu (6)",
+  "menu-additional-duck-tempura-title": "Duck Tempura (1)",
+  "menu-additional-chicken-pork-panko-title": "Chicken/Pork Panko (1)",
+  "menu-additional-chicken-sate-title": "Chicken Sate without sticks (1,5,6)",
+  "menu-additional-tempeh-bacen-title": "Tempeh Bacen (1,6)",
+  "menu-additional-shrimp-title": "Shrimp (1,2,*)",
+  "menu-additional-chicken-pork-tempura-title": "Chicken/Pork Tempura (1)",
+  "menu-additional-soup-chicken-panko-title": "Chicken Panko",
+  "menu-additional-soup-chicken-title": "Chicken",
+  "menu-additional-soup-shrimp-title": "Shrimp",
+  "menu-additional-soup-minced-beef-title": "Minced Beef",
+  "menu-additional-soup-tempeh-tofu-title": "Tempe / Tofu",
+  "menu-appetizers-bakwan-title": "Bakwan",
+  "menu-appetizers-bakwan-desc": "Cabbage and carrot pancakes (1,*,**)",
+  "menu-appetizers-bakwan-jagung-title": "Bakwan Jagung",
+  "menu-appetizers-bakwan-jagung-desc": "Corn and spring onion pancakes (1,*,**)",
+  "menu-appetizers-lumpia-mie-title": "Lumpia Mie",
+  "menu-appetizers-lumpia-mie-desc": "Spring rolls with soy noodles (1,*,**)",
+  "menu-appetizers-lumpia-sayur-title": "Lumpia Sayur",
+  "menu-appetizers-lumpia-sayur-desc": "Spring rolls with vegetables (1,*,**)",
+  "menu-appetizers-lumpia-ayam-title": "Lumpia Ayam",
+  "menu-appetizers-lumpia-ayam-desc": "Spring rolls with chicken (1)",
+  "menu-appetizers-pangsit-goreng-chicken-title": "Pangsit Goreng Ayam",
+  "menu-appetizers-pangsit-goreng-chicken-desc": "Fried dumplings with chicken (1)",
+  "menu-appetizers-pangsit-goreng-vege-title": "Pangsit Goreng Vege",
+  "menu-appetizers-pangsit-goreng-vege-desc": "Fried dumplings with vegetables (1, **)",
+  "menu-appetizers-tempeh-pastry-title": "Tempeh in Pastry (1,6,*,**)",
+  "menu-soups-bakso-title": "Bakso",
+  "menu-soups-bakso-desc": "Beef broth with beef meatballs (1,6)",
+  "menu-soups-pangsit-title": "Pangsit",
+  "menu-soups-pangsit-desc": "Beef broth with chicken dumplings (1,6)",
+  "menu-soups-toba-title": "Toba",
+  "menu-soups-toba-desc": "Vegetable broth with veggie dumplings (1,6)",
+  "menu-tempura-duck-title": "Duck",
+  "menu-tempura-chicken-title": "Chicken",
+  "menu-tempura-pork-title": "Pork",
+  "menu-tempura-shrimp-title": "Shrimp",
+  "menu-tempura-calamari-title": "Calamari",
+  "menu-tempura-zucchini-eggplant-title": "Zucchini/Eggplant",
+  "menu-tempura-tempeh-tofu-title": "Tempeh/Tofu",
+  "menu-tempura-sauce-asam-manis-title": "Asam Manis - sweet & sour (1,**)",
+  "menu-tempura-sauce-balado-title": "Balado - sweet & spicy (1,**)",
+  "menu-tempura-sauce-padang-title": "Padang - tomato with lemongrass (1,**)",
+  "menu-tempura-sauce-kacang-title": "Kacang - peanut (15,**)",
+  "menu-tempura-sauce-terasi-title": "Terasi - tomato with shrimp paste (1,4)",
+  "menu-tempura-sauce-curry-title": "Curry (1,**)",
+  "menu-tempura-sauce-lada-hitman-title": "Lada Hitman - peppery (1,4,6,**)",
+  "menu-other-dishes-dorada-timur-title": "Dorada Timur",
+  "menu-other-dishes-dorada-timur-desc": "Grilled marinated Dorada in soy-galangal sauce (1,4,6)",
+  "menu-other-dishes-rendang-title": "Rendang",
+  "menu-other-dishes-rendang-desc": "Caramelized beef brisket (1,)",
+  "menu-other-dishes-kemangi-title": "Kemangi",
+  "menu-other-dishes-kemangi-desc": "Salmon stewed with vegetables (1,4)",
+  "menu-other-dishes-bakar-babi-title": "Bakar Babi",
+  "menu-other-dishes-bakar-babi-desc": "Grilled pork with spices and pineapple (1)",
+  "menu-other-dishes-manuk-title": "Manuk",
+  "menu-other-dishes-manuk-desc": "Chicken in spiced palm sugar sauce (1,*)",
+  "menu-other-dishes-iga-kupang-title": "Iga Kupang",
+  "menu-other-dishes-iga-kupang-desc": "Ribs in honey-spice sauce (1)",
+  "menu-other-dishes-kurczak-kalasan-title": "Kurczak Kalasan",
+  "menu-other-dishes-kurczak-kalasan-desc": "Grilled chicken with white cardamom & sesame sauce (1,6,10)",
+  "menu-other-dishes-kaczka-gulai-title": "Duck Gulai",
+  "menu-other-dishes-kaczka-gulai-desc": "Duck with Sumatra sauce and fried vegetables (1,)",
+  "menu-other-dishes-opor-title": "Opor",
+  "menu-other-dishes-opor-desc": "Shrimp in coconut sauce (1,4)",
+  "menu-other-dishes-baklazan-rendang-title": "Eggplant Rendang",
+  "menu-other-dishes-baklazan-rendang-desc": "Breaded eggplant with Sumatra sauce and vegetable mix (1,*,**,6)",
+  "menu-other-dishes-sumatra-wege-title": "Sumatra Veggie",
+  "menu-other-dishes-sumatra-wege-desc": "Fried tempeh with Sumatra sauce and vegetable mix (1,*,**,6)",
+  "menu-other-dishes-ketoprak-title": "Ketoprak",
+  "menu-other-dishes-ketoprak-desc": "Cooked vegetables, soy noodles, tempeh, peanut sauce (1,5,6)",
+  "menu-other-dishes-lalapan-title": "Lalapan (Salad)",
+  "menu-other-dishes-lalapan-desc": "Mix of salads and vegetables, peanut sauce or sambal",
+  "menu-drinks-water-title": "Water",
+  "menu-drinks-water-desc": "Still / Sparkling",
+  "menu-drinks-pepsi-title": "Pepsi Drinks",
+  "menu-drinks-pepsi-desc": "0.2L",
+  "menu-drinks-juice-title": "Juices",
+  "menu-drinks-juice-desc": "0.2L",
+  "menu-drinks-lemonade-title": "Lemonade / Compote",
+  "menu-drinks-lemonade-desc": "0.4L / 1L",
+  "menu-drinks-tea-title": "Tea",
+  "menu-drinks-tea-desc": "Black / Green / Fruit",
+  "menu-drinks-coffee-title": "Coffee",
+  "menu-drinks-coffee-desc": "Espresso / Latte / Americano",
+  "menu-drinks-beer-title": "Beer",
+  "menu-drinks-beer-desc": "Non-alcoholic",
+  "allergens-gluten": "Cereals containing gluten",
+  "allergens-crustaceans": "Crustaceans and products thereof",
+  "allergens-eggs": "Eggs and products thereof",
+  "allergens-fish": "Fish and products thereof",
+  "allergens-peanuts": "Peanuts",
+  "allergens-soy": "Soy",
+  "allergens-milk": "Milk",
+  "allergens-celery": "Celery",
+  "allergens-mustard": "Mustard",
+  "allergens-sesame": "Sesame seeds",
+  "allergens-sulphur-dioxide": "Sulphur dioxide",
+  "allergens-lupin": "Lupin",
+  "allergens-molluscs": "Mollusks",
+  "allergens-gluten-free": "Gluten-free version available",
+  "allergens-vegan": "Vegan version available",
   "contact-title": "Contact",
   "contact-info-title": "Contact Information",
   "contact-address-label": "Address:",
-  "contact-address": "15 Indonesian Street, 00-001 Warsaw",
+  "contact-address": "Indonesian St. 15, 00-001 Warsaw",
   "contact-phone-label": "Phone:",
-  "contact-hours-label": "Opening hours:",
-  "contact-hours": "Mon-Sun: 12:00 - 22:00",
+  "contact-hours-label": "Opening Hours:",
+  "contact-hours": "Mon-Sat: 12:00 - 22:00, Sun: 12:00 - 20:00",
   "contact-social-title": "Find us on social media:",
   "contact-form-title": "Write to us",
   "demo-label": "Demo:",
-  "demo-text": "This is a sample contact form. In real implementation it would require backend connection.",
-  "form-name-label": "Full name",
+  "demo-text": "This is a sample contact form. In a real implementation it would need to be connected to a backend.",
+  "form-name-label": "Full Name",
   "form-name-placeholder": "Your full name",
   "form-email-label": "Email",
   "form-email-placeholder": "your@email.com",
   "form-message-label": "Message",
   "form-message-placeholder": "Your message...",
   "form-submit-btn": "Send Message",
-  "form-success": "Demo: Form submitted! In real version the message would be sent to the restaurant.",
   "form-required-field": "This field is required",
   "form-invalid-email": "Invalid email address",
-  "footer-tagline": "Authentic Indonesian flavors in elegant presentation",
+  "form-success": "Demo: The form has been submitted! In a real version the message would be sent to the restaurant.",
+  "footer-tagline": "Authentic Indonesian flavors in an elegant setting",
   "footer-copyright": "All rights reserved.",
+  "footer-created-by": "Website created by",
   "api-status-error": "An error occurred.",
-  "api-status-success": "Operation successful."
+  "api-status-success": "Operation completed successfully."
 }
