--- a/src/i18n/messages/id.json
+++ b/src/i18n/messages/id.json
@@ -5,70 +5,192 @@
   "nav-food": "Makanan Kami",
   "nav-contact": "Kontak",
   "hero-title": "Warung Sumatra",
-  "hero-subtitle": "Cita rasa autentik Indonesia dalam penyajian elegan",
+  "hero-subtitle": "Rasa otentik Indonesia dalam suasana elegan",
   "hero-menu-btn": "Lihat Menu",
   "hero-reservation-btn": "Reservasi",
   "about-title": "Tentang Restoran",
   "about-story-title": "Cerita Kami",
-  "about-story-1": "Warung Sumatra adalah tempat di mana masakan tradisional Indonesia bertemu dengan keanggunan modern. Resep kami berasal dari pulau Sumatera dan daerah lain di Indonesia, diturunkan dari generasi ke generasi.",
-  "about-story-2": "Kami menyiapkan setiap hidangan dengan bahan-bahan segar, menggunakan rempah-rempah autentik yang diimpor langsung dari Indonesia. Tim koki kami menggabungkan teknik tradisional dengan presentasi modern.",
+  "about-story-1": "Warung Sumatra adalah tempat di mana masakan tradisional Indonesia bertemu dengan keanggunan modern. Resep kami berasal dari Pulau Sumatra dan wilayah lain di Indonesia, diwariskan dari generasi ke generasi.",
+  "about-story-2": "Setiap hidangan kami siapkan dengan bahan-bahan segar, menggunakan bumbu otentik yang diimpor langsung dari Indonesia. Tim koki kami menggabungkan teknik tradisional dengan penyajian modern.",
   "about-years": "Tahun Pengalaman",
   "about-dishes": "Hidangan di Menu",
   "food-title": "Spesialisasi Kami",
-  "food-subtitle": "Temukan kekayaan masakan Indonesia dalam interpretasi khas kami",
+  "food-subtitle": "Temukan kekayaan cita rasa masakan Indonesia dalam interpretasi unik kami",
   "dish-nasi-title": "Nasi Goreng",
-  "dish-nasi-desc": "Nasi goreng tradisional Indonesia dengan sayuran, telur dan rempah aromatik",
+  "dish-nasi-desc": "Nasi goreng tradisional Indonesia dengan sayuran, telur, dan bumbu aromatik",
   "dish-rendang-title": "Rendang",
-  "dish-rendang-desc": "Kari daging sapi aromatik dimasak dalam santan dengan campuran rempah kaya",
+  "dish-rendang-desc": "Curry daging sapi aromatik dimasak dengan santan dan campuran rempah kaya",
   "dish-gado-title": "Gado-Gado",
-  "dish-gado-desc": "Salad sayuran segar disajikan dengan saus kacang satay tradisional",
+  "dish-gado-desc": "Salad sayuran segar disajikan dengan saus kacang tradisional",
   "menu-title": "Menu",
   "gallery-title": "Interior Kami",
   "gallery-main": "Ruang Utama",
   "gallery-bar": "Area Bar",
   "gallery-private": "Ruang Pribadi",
-  "menu-main-title": "Hidangan Utama",
-  "menu-appetizers-title": "Pembuka",
-  "menu-desserts-title": "Penutup",
-  "menu-nasi-ayam": "Nasi Goreng Ayam",
-  "menu-nasi-ayam-desc": "Nasi goreng dengan ayam dan sayuran",
-  "menu-rendang": "Rendang Daging",
-  "menu-rendang-desc": "Daging sapi kari santan",
-  "menu-ayam-bakar": "Ayam Bakar",
-  "menu-ayam-bakar-desc": "Ayam panggang dengan saus kecap",
-  "menu-mie-goreng": "Mie Goreng",
-  "menu-mie-goreng-desc": "Mie goreng dengan sayuran",
-  "menu-gado-gado": "Gado-Gado",
-  "menu-gado-gado-desc": "Salad dengan saus kacang",
-  "menu-satay": "Satay Ayam",
-  "menu-satay-desc": "Sate ayam (6 tusuk)",
-  "menu-es-cendol": "Es Cendol",
-  "menu-es-cendol-desc": "Pencuci mulut santan tradisional",
-  "menu-pisang-goreng": "Pisang Goreng",
-  "menu-pisang-goreng-desc": "Pisang goreng berbalut tepung",
+  "menu-additional-to-choose-title": "Tambahan Pilihan",
+  "menu-additional-sauce-to-choose-title": "Saus Pilihan",
+  "menu-bakmie-title": "Bakmie (Mie Goreng)",
+  "menu-allergens-title": "Daftar Alergen",
+  "menu-nasi-goreng-title": "Nasi Goreng (Nasi Goreng)",
+  "menu-other-dishes-title": "Hidangan Lain",
+  "menu-soups-title": "Sup",
+  "menu-soups-subtitle": "500ml (pilih dari mie kedelai, nasi, gandum, atau mie beras)",
+  "menu-appetizers-title": "Appetizer",
+  "menu-tempura-title": "Tempura",
+  "menu-drinks-title": "Minuman",
+  "menu-bakmie-wheat-peanut-sauce-title": "Gandum dengan saus kacang (1,6,**)",
+  "menu-bakmie-rice-or-soy-oyster-sauce-title": "Nasi atau kedelai dengan saus tiram (1,4,6)",
+  "menu-bakmie-rice-hoisin-sauce-title": "Nasi dengan saus hoisin (1,*,**)",
+  "menu-bakmie-wheat-or-rice-sumatra-sauce-title": "Gandum atau nasi dengan saus Sumatra (1,*,**)",
+  "menu-bakmie-wheat-or-soy-tumbuk-sauce-title": "Gandum atau kedelai dengan saus Tumbuk (1,*,**)",
+  "menu-bakmie-wheat-or-soy-tumbuk-sauce-desc": "Kunyit, Kelapa, Serai",
+  "menu-bakmie-wheat-or-rice-harasak-sauce-title": "Gandum atau nasi dengan saus Harasak (1,4)",
+  "menu-bakmie-wheat-or-rice-harasak-sauce-desc": "Rasa ikan",
+  "menu-bakmie-wheat-or-soy-jingo-sauce-title": "Gandum atau kedelai dengan saus Jingo (1,*,**)",
+  "menu-bakmie-wheat-or-soy-jingo-sauce-desc": "Kari",
+  "menu-nasigoreng-batak-title": "Batak",
+  "menu-nasigoreng-batak-desc": "Saus berbumbu (1,*,**)",
+  "menu-nasigoreng-kampung-title": "Kampung",
+  "menu-nasigoreng-kampung-desc": "Saus manis dan asin (1,6,)",
+  "menu-nasigoreng-kare-title": "Kare",
+  "menu-nasigoreng-kare-desc": "Kari (1,*,**)",
+  "menu-nasigoreng-hoisin-title": "Hoisin",
+  "menu-nasigoreng-hoisin-desc": "Asem asap (1,*,**)",
+  "menu-nasigoreng-gublak-title": "Gublak",
+  "menu-nasigoreng-gublak-desc": "Pasta rawan (1,6,**)",
+  "menu-nasigoreng-celor-title": "Celor",
+  "menu-nasigoreng-celor-desc": "Campuran rempah Indonesia (1,**)",
+  "menu-nasigoreng-lada-hitman-title": "Lada Hitman",
+  "menu-nasigoreng-lada-hitman-desc": "Lada hitam (1,4,6,**)",
+  "menu-additional-chicken-title": "Ayam",
+  "menu-additional-pork-title": "Babi",
+  "menu-additional-beef-title": "Sapi",
+  "menu-additional-tempeh-tofu-title": "Tempeh / Tahu (6)",
+  "menu-additional-duck-tempura-title": "Bebek Tempura (1)",
+  "menu-additional-chicken-pork-panko-title": "Ayam/Babi Panko (1)",
+  "menu-additional-chicken-sate-title": "Ayam Sate tanpa tusuk (1,5,6)",
+  "menu-additional-tempeh-bacen-title": "Tempeh Bacen (1,6)",
+  "menu-additional-shrimp-title": "Udang (1,2,*)",
+  "menu-additional-chicken-pork-tempura-title": "Ayam/Babi Tempura (1)",
+  "menu-additional-soup-chicken-panko-title": "Ayam Panko",
+  "menu-additional-soup-chicken-title": "Ayam",
+  "menu-additional-soup-shrimp-title": "Udang",
+  "menu-additional-soup-minced-beef-title": "Daging Sapi Cincang",
+  "menu-additional-soup-tempeh-tofu-title": "Tempe / Tahu",
+  "menu-appetizers-bakwan-title": "Bakwan",
+  "menu-appetizers-bakwan-desc": "Pancake kubis dan wortel (1,*,**)",
+  "menu-appetizers-bakwan-jagung-title": "Bakwan Jagung",
+  "menu-appetizers-bakwan-jagung-desc": "Pancake jagung dan daun bawang (1,*,**)",
+  "menu-appetizers-lumpia-mie-title": "Lumpia Mie",
+  "menu-appetizers-lumpia-mie-desc": "Lumpia dengan mie kedelai (1,*,**)",
+  "menu-appetizers-lumpia-sayur-title": "Lumpia Sayur",
+  "menu-appetizers-lumpia-sayur-desc": "Lumpia dengan sayuran (1,*,**)",
+  "menu-appetizers-lumpia-ayam-title": "Lumpia Ayam",
+  "menu-appetizers-lumpia-ayam-desc": "Lumpia dengan ayam (1)",
+  "menu-appetizers-pangsit-goreng-chicken-title": "Pangsit Goreng Ayam",
+  "menu-appetizers-pangsit-goreng-chicken-desc": "Pangsit goreng dengan ayam (1)",
+  "menu-appetizers-pangsit-goreng-vege-title": "Pangsit Goreng Vege",
+  "menu-appetizers-pangsit-goreng-vege-desc": "Pangsit goreng dengan sayuran (1, **)",
+  "menu-appetizers-tempeh-pastry-title": "Tempeh dalam Pastry (1,6,*,**)",
+  "menu-soups-bakso-title": "Bakso",
+  "menu-soups-bakso-desc": "Kaldu sapi dengan bakso sapi (1,6)",
+  "menu-soups-pangsit-title": "Pangsit",
+  "menu-soups-pangsit-desc": "Kaldu sapi dengan pangsit ayam (1,6)",
+  "menu-soups-toba-title": "Toba",
+  "menu-soups-toba-desc": "Kaldu sayuran dengan pangsit vege (1,6)",
+  "menu-tempura-duck-title": "Bebek",
+  "menu-tempura-chicken-title": "Ayam",
+  "menu-tempura-pork-title": "Babi",
+  "menu-tempura-shrimp-title": "Udang",
+  "menu-tempura-calamari-title": "Cumi",
+  "menu-tempura-zucchini-eggplant-title": "Zucchini / Terong",
+  "menu-tempura-tempeh-tofu-title": "Tempeh / Tahu",
+  "menu-tempura-sauce-asam-manis-title": "Asam Manis - manis & asam (1,**)",
+  "menu-tempura-sauce-balado-title": "Balado - manis & pedas (1,**)",
+  "menu-tempura-sauce-padang-title": "Padang - tomat dengan serai (1,**)",
+  "menu-tempura-sauce-kacang-title": "Kacang - kacang (15,**)",
+  "menu-tempura-sauce-terasi-title": "Terasi - tomat dengan pasta udang (1,4)",
+  "menu-tempura-sauce-curry-title": "Kari (1,**)",
+  "menu-tempura-sauce-lada-hitman-title": "Lada Hitman - pedas (1,4,6,**)",
+  "menu-other-dishes-dorada-timur-title": "Dorada Timur",
+  "menu-other-dishes-dorada-timur-desc": "Ikan Dorada panggang dengan saus kedelai-galangal (1,4,6)",
+  "menu-other-dishes-rendang-title": "Rendang",
+  "menu-other-dishes-rendang-desc": "Daging sapi panggang karamel (1,)",
+  "menu-other-dishes-kemangi-title": "Kemangi",
+  "menu-other-dishes-kemangi-desc": "Salmon rebus dengan sayuran (1,4)",
+  "menu-other-dishes-bakar-babi-title": "Bakar Babi",
+  "menu-other-dishes-bakar-babi-desc": "Babi panggang dengan bumbu dan nanas (1)",
+  "menu-other-dishes-manuk-title": "Manuk",
+  "menu-other-dishes-manuk-desc": "Ayam dengan saus gula aren berbumbu (1,*)",
+  "menu-other-dishes-iga-kupang-title": "Iga Kupang",
+  "menu-other-dishes-iga-kupang-desc": "Iga dengan saus madu & rempah (1)",
+  "menu-other-dishes-kurczak-kalasan-title": "Kurczak Kalasan",
+  "menu-other-dishes-kurczak-kalasan-desc": "Ayam panggang dengan saus kapulaga putih & wijen (1,6,10)",
+  "menu-other-dishes-kaczka-gulai-title": "Bebek Gulai",
+  "menu-other-dishes-kaczka-gulai-desc": "Bebek dengan saus Sumatra dan sayuran goreng (1,)",
+  "menu-other-dishes-opor-title": "Opor",
+  "menu-other-dishes-opor-desc": "Udang dalam saus kelapa (1,4)",
+  "menu-other-dishes-baklazan-rendang-title": "Terong Rendang",
+  "menu-other-dishes-baklazan-rendang-desc": "Terong goreng tepung dengan saus Sumatra dan campuran sayur (1,*,**,6)",
+  "menu-other-dishes-sumatra-wege-title": "Sumatra Veggie",
+  "menu-other-dishes-sumatra-wege-desc": "Tempe goreng dengan saus Sumatra dan campuran sayur (1,*,**,6)",
+  "menu-other-dishes-ketoprak-title": "Ketoprak",
+  "menu-other-dishes-ketoprak-desc": "Sayuran rebus, mie kedelai, tempe, saus kacang (1,5,6)",
+  "menu-other-dishes-lalapan-title": "Lalapan (Salad)",
+  "menu-other-dishes-lalapan-desc": "Campuran salad dan sayuran, saus kacang atau sambal",
+  "menu-drinks-water-title": "Air",
+  "menu-drinks-water-desc": "Tanpa gas / Berkarbonasi",
+  "menu-drinks-pepsi-title": "Minuman Pepsi",
+  "menu-drinks-pepsi-desc": "0.2L",
+  "menu-drinks-juice-title": "Jus",
+  "menu-drinks-juice-desc": "0.2L",
+  "menu-drinks-lemonade-title": "Lemonade / Kompot",
+  "menu-drinks-lemonade-desc": "0.4L / 1L",
+  "menu-drinks-tea-title": "Teh",
+  "menu-drinks-tea-desc": "Hitam / Hijau / Buah",
+  "menu-drinks-coffee-title": "Kopi",
+  "menu-drinks-coffee-desc": "Espresso / Latte / Americano",
+  "menu-drinks-beer-title": "Bir",
+  "menu-drinks-beer-desc": "Non-alkohol",
+  "allergens-gluten": "Serealia yang mengandung gluten",
+  "allergens-crustaceans": "Udang dan produk turunannya",
+  "allergens-eggs": "Telur dan produk turunannya",
+  "allergens-fish": "Ikan dan produk turunannya",
+  "allergens-peanuts": "Kacang tanah",
+  "allergens-soy": "Kedelai",
+  "allergens-milk": "Susu",
+  "allergens-celery": "Seledri",
+  "allergens-mustard": "Mustard",
+  "allergens-sesame": "Biji wijen",
+  "allergens-sulphur-dioxide": "Sulfur dioksida",
+  "allergens-lupin": "Lupin",
+  "allergens-molluscs": "Moluska",
+  "allergens-gluten-free": "Versi bebas gluten tersedia",
+  "allergens-vegan": "Versi vegan tersedia",
   "contact-title": "Kontak",
   "contact-info-title": "Informasi Kontak",
   "contact-address-label": "Alamat:",
   "contact-address": "Jl. Indonesia 15, 00-001 Warsawa",
   "contact-phone-label": "Telepon:",
-  "contact-hours-label": "Jam buka:",
-  "contact-hours": "Sen-Min: 12:00 - 22:00",
+  "contact-hours-label": "Jam Operasional:",
+  "contact-hours": "Sen-Sab: 12:00 - 22:00, Minggu: 12:00 - 20:00",
   "contact-social-title": "Temukan kami di media sosial:",
   "contact-form-title": "Tulis kepada kami",
   "demo-label": "Demo:",
-  "demo-text": "Ini adalah formulir kontak contoh. Dalam implementasi nyata akan memerlukan koneksi backend.",
-  "form-name-label": "Nama lengkap",
-  "form-name-placeholder": "Nama lengkap Anda",
+  "demo-text": "Ini adalah formulir contoh. Dalam implementasi nyata, ini akan terhubung ke backend.",
+  "form-name-label": "Nama Lengkap",
+  "form-name-placeholder": "Nama Anda",
   "form-email-label": "Email",
   "form-email-placeholder": "email@anda.com",
   "form-message-label": "Pesan",
   "form-message-placeholder": "Pesan Anda...",
   "form-submit-btn": "Kirim Pesan",
-  "form-success": "Demo: Formulir terkirim! Dalam versi nyata pesan akan dikirim ke restoran.",
-  "form-required-field": "Field ini wajib diisi",
+  "form-required-field": "Kolom ini wajib diisi",
   "form-invalid-email": "Alamat email tidak valid",
-  "footer-tagline": "Cita rasa autentik Indonesia dalam penyajian elegan",
-  "footer-copyright": "Semua hak dilindungi.",
+  "form-success": "Demo: Formulir telah dikirim! Dalam versi nyata, pesan akan dikirim ke restoran.",
+  "footer-tagline": "Rasa otentik Indonesia dalam suasana elegan",
+  "footer-copyright": "Hak cipta dilindungi.",
+  "footer-created-by": "Situs dibuat oleh",
   "api-status-error": "Terjadi kesalahan.",
   "api-status-success": "Operasi berhasil."
 }
