--- a/src/i18n/messages/pl.json
+++ b/src/i18n/messages/pl.json
@@ -27,32 +27,153 @@
   "gallery-main": "Sala Główna",
   "gallery-bar": "Strefa Bar",
   "gallery-private": "Sala Prywatna",
-  "menu-main-title": "Dania Główne",
+  "menu-additional-to-choose-title": "Dodatki do wyboru",
+  "menu-additional-sauce-to-choose-title": "Sosy do wyboru",
+  "menu-bakmie-title": "Bakmie (Smażony makaron)",
+  "menu-allergens-title": "Lista Alergenów",
+  "menu-nasi-goreng-title": "Nasi Goreng (Smażony ryż)",
+  "menu-other-dishes-title": "Inne Dania",
+  "menu-soups-title": "Zupy",
+  "menu-soups-subtitle": "500ml (do wyboru makaron sojowy, ryżowy, pszenny lub ryż)",
   "menu-appetizers-title": "Przystawki",
-  "menu-desserts-title": "Desery",
-  "menu-nasi-ayam": "Nasi Goreng Ayam",
-  "menu-nasi-ayam-desc": "Smażony ryż z kurczakiem i warzywami",
-  "menu-rendang": "Rendang Daging",
-  "menu-rendang-desc": "Wołowina w curry kokosowym",
-  "menu-ayam-bakar": "Ayam Bakar",
-  "menu-ayam-bakar-desc": "Grillowany kurczak w sosie sojowym",
-  "menu-mie-goreng": "Mie Goreng",
-  "menu-mie-goreng-desc": "Smażony makaron z warzywami",
-  "menu-gado-gado": "Gado-Gado",
-  "menu-gado-gado-desc": "Sałatka z sosem orzechowym",
-  "menu-satay": "Satay Ayam",
-  "menu-satay-desc": "Szaszłyki z kurczaka (6 szt.)",
-  "menu-es-cendol": "Es Cendol",
-  "menu-es-cendol-desc": "Tradycyjny deser z mleka kokosowego",
-  "menu-pisang-goreng": "Pisang Goreng",
-  "menu-pisang-goreng-desc": "Smażone banany w cieście",
+  "menu-tempura-title": "Tempura",
+  "menu-drinks-title": "Napoje",
+  "menu-bakmie-wheat-peanut-sauce-title": "Pszenny z sosem orzechowym (1,6,**)",
+  "menu-bakmie-rice-or-soy-oyster-sauce-title": "Ryżowy lub sojowy z sosem ostrygowym (1,4,6)",
+  "menu-bakmie-rice-hoisin-sauce-title": "Ryżowy z sosem hoisin (1,*,**)",
+  "menu-bakmie-wheat-or-rice-sumatra-sauce-title": "Pszenny lub ryżowy z sosem Sumatra (1,*,**)",
+  "menu-bakmie-wheat-or-soy-tumbuk-sauce-title": "Pszenny lub sojowy z sosem Tumbuk (1,*,**)",
+  "menu-bakmie-wheat-or-soy-tumbuk-sauce-desc": "Kurkuma, Kokos, Trawa cytrynowa",
+  "menu-bakmie-wheat-or-rice-harasak-sauce-title": "Pszenny lub ryżowy z sosem Harasak (1,4)",
+  "menu-bakmie-wheat-or-rice-harasak-sauce-desc": "Rybny",
+  "menu-bakmie-wheat-or-soy-jingo-sauce-title": "Pszenny lub sojowy z sosem Jingo (1,*,**)",
+  "menu-bakmie-wheat-or-soy-jingo-sauce-desc": "Curry",
+  "menu-nasigoreng-batak-title": "Batak",
+  "menu-nasigoreng-batak-desc": "Sos korzenny (1,*,**)",
+  "menu-nasigoreng-kampung-title": "Kampung",
+  "menu-nasigoreng-kampung-desc": "Słodko-słony sos sojowy (1,6,)",
+  "menu-nasigoreng-kare-title": "Kare",
+  "menu-nasigoreng-kare-desc": "Curry (1,*,**)",
+  "menu-nasigoreng-hoisin-title": "Hoisin",
+  "menu-nasigoreng-hoisin-desc": "Wędzona śliwka (1,*,**)",
+  "menu-nasigoreng-gublak-title": "Gublak",
+  "menu-nasigoreng-gublak-desc": "Pasta rawan (1,6,**)",
+  "menu-nasigoreng-celor-title": "Celor",
+  "menu-nasigoreng-celor-desc": "Miks przypraw indonezyjskich (1,**)",
+  "menu-nasigoreng-lada-hitman-title": "Lada hitman",
+  "menu-nasigoreng-lada-hitman-desc": "Czarny pieprz (1,4,6,**)",
+  "menu-additional-chicken-title": "Kurczak",
+  "menu-additional-pork-title": "Wieprzowina",
+  "menu-additional-beef-title": "Wołowina",
+  "menu-additional-tempeh-tofu-title": "Tempeh / Tofu (6)",
+  "menu-additional-duck-tempura-title": "Kaczka w tempurze (1)",
+  "menu-additional-chicken-pork-panko-title": "Kurczak/Wieprzowina panko (1)",
+  "menu-additional-chicken-sate-title": "Kurczak sate bez patyczyków (1,5,6)",
+  "menu-additional-tempeh-bacen-title": "Tempeh bacen (1,6)",
+  "menu-additional-shrimp-title": "Krewetki (1,2,*)",
+  "menu-additional-chicken-pork-tempura-title": "Kurczak/Wieprzowina tempura (1)",
+  "menu-additional-soup-chicken-panko-title": "Kurczak panko",
+  "menu-additional-soup-chicken-title": "Kurczak",
+  "menu-additional-soup-shrimp-title": "Krewetki",
+  "menu-additional-soup-minced-beef-title": "Mielona wołowina",
+  "menu-additional-soup-tempeh-tofu-title": "Tempe / Tofu",
+  "menu-appetizers-bakwan-title": "Bakwan",
+  "menu-appetizers-bakwan-desc": "Placki z kapustą i marchewką (1,*,**)",
+  "menu-appetizers-bakwan-jagung-title": "Bakwan jagung",
+  "menu-appetizers-bakwan-jagung-desc": "Placki z kukurydzą i dymką (1,*,**)",
+  "menu-appetizers-lumpia-mie-title": "Lumpia mie",
+  "menu-appetizers-lumpia-mie-desc": "Sajgonki z makaronem sojowym (1,*,**)",
+  "menu-appetizers-lumpia-sayur-title": "Lumpia sayur",
+  "menu-appetizers-lumpia-sayur-desc": "Sajgonki z warzywami (1,*,**)",
+  "menu-appetizers-lumpia-ayam-title": "Lumpia ayam",
+  "menu-appetizers-lumpia-ayam-desc": "Sajgonki z kurczakiem (1)",
+  "menu-appetizers-pangsit-goreng-chicken-title": "Pangsit goreng ayam",
+  "menu-appetizers-pangsit-goreng-chicken-desc": "Smażone pierożki z kurczakiem (1)",
+  "menu-appetizers-pangsit-goreng-vege-title": "Pangsit goreng vege",
+  "menu-appetizers-pangsit-goreng-vege-desc": "Smażone pierożki z warzywami (1, **)",
+  "menu-appetizers-tempeh-pastry-title": "Tempeh w cieście (1,6,*,**)",
+  "menu-soups-bakso-title": "Bakso",
+  "menu-soups-bakso-desc": "Bulion wołowy z klopsikami wołowymi (1,6)",
+  "menu-soups-pangsit-title": "Pangsit",
+  "menu-soups-pangsit-desc": "Bulion wołowy z pierożkami z kurczakiem (1,6)",
+  "menu-soups-toba-title": "Toba",
+  "menu-soups-toba-desc": "Wywar warzywny z pierożkami wege (1,6)",
+  "menu-tempura-duck-title": "Kaczka",
+  "menu-tempura-chicken-title": "Kurczak",
+  "menu-tempura-pork-title": "Wieprzowina",
+  "menu-tempura-shrimp-title": "Krewetki",
+  "menu-tempura-calamari-title": "Kalmary",
+  "menu-tempura-zucchini-eggplant-title": "Cukinia/Bakłażan",
+  "menu-tempura-tempeh-tofu-title": "Tempeh/Tofu",
+  "menu-tempura-sauce-asam-manis-title": "Asam manis - słodko-kwaśny (1,**)",
+  "menu-tempura-sauce-balado-title": "Balado - słodkoostry (1,**)",
+  "menu-tempura-sauce-padang-title": "Padang - pomidorowy z trawą cytrynową (1,**)",
+  "menu-tempura-sauce-kacang-title": "Kacang - orzechowy (15,**)",
+  "menu-tempura-sauce-terasi-title": "Terasi - pomidorowy z pastą krewetkową (1,4)",
+  "menu-tempura-sauce-curry-title": "Curry - (1,**)",
+  "menu-tempura-sauce-lada-hitman-title": "Lada hitman - pieprzowy (1,4,6,**)",
+  "menu-other-dishes-dorada-timur-title": "Dorada timur",
+  "menu-other-dishes-dorada-timur-desc": "Grillowana marynowana w sosie sojowo galanga Dorada (1,4,6)",
+  "menu-other-dishes-rendang-title": "Rendang",
+  "menu-other-dishes-rendang-desc": "Karmelizowany mostek wołowy (1,)",
+  "menu-other-dishes-kemangi-title": "Kemangi",
+  "menu-other-dishes-kemangi-desc": "Łosoś duszony z warzywami (1,4)",
+  "menu-other-dishes-bakar-babi-title": "Bakar babi",
+  "menu-other-dishes-bakar-babi-desc": "Grillowana wieprzowina w przyprawach korzennych z dodatkiem ananasa (1)",
+  "menu-other-dishes-manuk-title": "Manuk",
+  "menu-other-dishes-manuk-desc": "Kurczak w sosie korzennym z cukrem palmowym (1,*)",
+  "menu-other-dishes-iga-kupang-title": "Iga kupang",
+  "menu-other-dishes-iga-kupang-desc": "Żeberka w sosie korzenno-miodowym (1)",
+  "menu-other-dishes-kurczak-kalasan-title": "Kurczak kalasan",
+  "menu-other-dishes-kurczak-kalasan-desc": "Grillowany kurczak w sosie z białego kardamonu i sezamu (1,6,10)",
+  "menu-other-dishes-kaczka-gulai-title": "Kaczka gulai",
+  "menu-other-dishes-kaczka-gulai-desc": "Kaczka z sosem Sumatra i smażonymi warzywami (1,)",
+  "menu-other-dishes-opor-title": "Opor",
+  "menu-other-dishes-opor-desc": "Krewetki w sosoie kokosowym (1,4)",
+  "menu-other-dishes-baklazan-rendang-title": "Bakłażan rendang",
+  "menu-other-dishes-baklazan-rendang-desc": "Bakłażan w panierce, sos Sumatra, miks warzyw (1,*,**,6)",
+  "menu-other-dishes-sumatra-wege-title": "Sumatra wege",
+  "menu-other-dishes-sumatra-wege-desc": "Smażone w tempeh z sosem Sumatra, miks warzyw (1,*,**,6)",
+  "menu-other-dishes-ketoprak-title": "Ketoprak",
+  "menu-other-dishes-ketoprak-desc": "Gotowane warzywa, makaron sojowy, tempeh, sos orzechowy (1,5,6)",
+  "menu-other-dishes-lalapan-title": "Lalapan (Sałatka)",
+  "menu-other-dishes-lalapan-desc": "Miks sałat i warzyw, sos orzechowy lub sambal",
+  "menu-drinks-water-title": "Woda",
+  "menu-drinks-water-desc": "Niegazowana/gazowana",
+  "menu-drinks-pepsi-title": "Napoje pepsi",
+  "menu-drinks-pepsi-desc": "0.2L",
+  "menu-drinks-juice-title": "Soki",
+  "menu-drinks-juice-desc": "0.2L",
+  "menu-drinks-lemonade-title": "Lemoniada/kompot",
+  "menu-drinks-lemonade-desc": "0.4L / 1L",
+  "menu-drinks-tea-title": "Herbata",
+  "menu-drinks-tea-desc": "Czarna/Zielona/Owocowa",
+  "menu-drinks-coffee-title": "Kawa",
+  "menu-drinks-coffee-desc": "Espresso/Latte/Americano",
+  "menu-drinks-beer-title": "Piwo",
+  "menu-drinks-beer-desc": "Bezalkoholowe",
+  "allergens-gluten": "Zboża zawierające gluten",
+  "allergens-crustaceans": "Skorupiaki i produkty pochodne",
+  "allergens-eggs": "Jaja i produkty pochodne",
+  "allergens-fish": "Ryby i produkty pochodne",
+  "allergens-peanuts": "Orzechy ziemne",
+  "allergens-soy": "Soja",
+  "allergens-milk": "Mleko",
+  "allergens-celery": "Seler",
+  "allergens-mustard": "Gorczyca",
+  "allergens-sesame": "Nasiona sezamu",
+  "allergens-sulphur-dioxide": "Dwutlenek siarki",
+  "allergens-lupin": "Łubin",
+  "allergens-molluscs": "Mięczaki",
+  "allergens-gluten-free": "dostępna wersja bezglutenowa",
+  "allergens-vegan": "dostępna wersja wegańska",
   "contact-title": "Kontakt",
   "contact-info-title": "Informacje Kontaktowe",
   "contact-address-label": "Adres:",
   "contact-address": "ul. Indonezyjska 15, 00-001 Warszawa",
   "contact-phone-label": "Telefon:",
   "contact-hours-label": "Godziny otwarcia:",
-  "contact-hours": "Pn-Nd: 12:00 - 22:00",
+  "contact-hours": "Pn-Sob: 12:00 - 22:00, Niedziela: 12:00 - 20:00",
   "contact-social-title": "Znajdź nas w social media:",
   "contact-form-title": "Napisz do nas",
   "demo-label": "Demo:",
@@ -69,6 +190,7 @@
   "form-success": "Demo: Formularz został wysłany! W rzeczywistej wersji wiadomość zostałaby przesłana do restauracji.",
   "footer-tagline": "Autentyczne smaki Indonezji w eleganckim wydaniu",
   "footer-copyright": "Wszystkie prawa zastrzeżone.",
+  "footer-created-by": "Strona stworzona przez",
   "api-status-error": "Wystąpił błąd.",
   "api-status-success": "Operacja zakończona sukcesem."
 }
