--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -29,9 +29,11 @@
   "gallery-private": "Private Room",
   "menu-additional-to-choose-title": "Additional Options",
   "menu-additional-sauce-to-choose-title": "Sauces to Choose",
-  "menu-bakmie-title": "Bakmie (Fried Noodles)",
+  "menu-bakmie-title": "Bakmie",
+  "menu-bakmie-subtitle": "Fried Noodles",
   "menu-allergens-title": "Allergen List",
-  "menu-nasi-goreng-title": "Nasi Goreng (Fried Rice)",
+  "menu-nasi-goreng-title": "Nasi Goreng",
+  "menu-nasi-goreng-subtitle": "Fried Rice",
   "menu-other-dishes-title": "Other Dishes",
   "menu-soups-title": "Soups",
   "menu-soups-subtitle": "500ml (choose from soy, rice, wheat, or rice noodles)",
