--- a/src/i18n/messages/id.json
+++ b/src/i18n/messages/id.json
@@ -29,9 +29,11 @@
   "gallery-private": "Ruang Pribadi",
   "menu-additional-to-choose-title": "Tambahan Pilihan",
   "menu-additional-sauce-to-choose-title": "Saus Pilihan",
-  "menu-bakmie-title": "Bakmie (Mie Goreng)",
+  "menu-bakmie-title": "Bakmie",
+  "menu-bakmie-subtitle": "Mie Goreng",
   "menu-allergens-title": "Daftar Alergen",
-  "menu-nasi-goreng-title": "Nasi Goreng (Nasi Goreng)",
+  "menu-nasi-goreng-title": "Nasi Goreng",
+  "menu-nasi-goreng-subtitle": "",
   "menu-other-dishes-title": "Hidangan Lain",
   "menu-soups-title": "Sup",
   "menu-soups-subtitle": "500ml (pilih dari mie kedelai, nasi, gandum, atau mie beras)",
