--- a/src/i18n/messages/pl.json
+++ b/src/i18n/messages/pl.json
@@ -29,9 +29,11 @@
   "gallery-private": "Sala Prywatna",
   "menu-additional-to-choose-title": "Dodatki do wyboru",
   "menu-additional-sauce-to-choose-title": "Sosy do wyboru",
-  "menu-bakmie-title": "Bakmie (Smażony makaron)",
+  "menu-bakmie-title": "Bakmie",
+  "menu-bakmie-subtitle": "Smażony makaron",
   "menu-allergens-title": "Lista Alergenów",
-  "menu-nasi-goreng-title": "Nasi Goreng (Smażony ryż)",
+  "menu-nasi-goreng-title": "Nasi Goreng",
+  "menu-nasi-goreng-subtitle": "Smażony ryż",
   "menu-other-dishes-title": "Inne Dania",
   "menu-soups-title": "Zupy",
   "menu-soups-subtitle": "500ml (do wyboru makaron sojowy, ryżowy, pszenny lub ryż)",
